--- a/ProSwiftUI Course/ProSwift-Steps-Info.plist
+++ b/ProSwiftUI Course/ProSwift-Steps-Info.plist
@@ -9,5 +9,12 @@
 		<key>UISceneConfigurations</key>
 		<dict/>
 	</dict>
+	<key>UILaunchScreen</key>
+	<dict>
+		<key>UIColorName</key>
+		<string>LaunchBackground</string>
+		<key>UIImageName</key>
+		<string>food-ramen</string>
+	</dict>
 </dict>
 </plist>
